# telegram-mailing-helper

./: README.md  pyproject.toml  test_config.json  update.sh
telegram_mailing_help/: __init__.py  appConfig.py  main.py  start.sh  telegramMailingHelper.py
telegram_mailing_help/db/: config.py  dao.py  daoExp.py  migration.py  utils.py
telegram_mailing_help/db/migration/: 0001.init_database.py  0002.add_dispatch_index_id_for_dispatch_list_assigns.py  0003.add_storage_table.py  0004.normalize_db.py  0005.add_priority_filed_in_dispatch_list_group.py  0006.extend_storage.py  0007.repeat_block_field.py  0008.new_settings_notification_free_blocks_less_then_count.py  0009.add_hidden_filed_in_dispatch_list_group.py  0010.add_show_comment_with_block_filed_in_dispatch_list_group.py
telegram_mailing_help/logic/: listPreparation.py
telegram_mailing_help/telegram/: bot.py
telegram_mailing_help/web/: config.py  server.py
telegram_mailing_help/web/templates/: chikagojs.js  dispatch_group_buttons.tpl  dispatch_group_info.tpl  dispatch_lists.css  dispatch_lists.html  dispatch_lists.tpl  footer.tpl  header.tpl  index.html  nicepage-custom.css  nicepage.css  nicepage.js  reports.css  reports.tpl  settings.tpl  users.tpl
template_for_service/: telegram-mailing-helper.service
tests/: test_configuration.py  test_dao.py  test_list_preparation.py  test_migration.py  test_telegram_mailing_help.py  test_utils.py
tests/resources/db_dump/: dump_migration_0002.db  dump_migration_0006.db
